--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #0f0f0f;
-      color: #ffffff;
+      color: #000000;
       margin: 0;
       padding: 0;
       display: flex;
